--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name=".tools.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -33,7 +34,8 @@
         </activity>
         <activity android:name=".WebActivity" />
         <activity android:name=".UserMode.LoginActivity" />
-        <activity android:name=".UserMode.User_DataActivity"></activity>
+        <activity android:name=".UserMode.User_DataActivity" />
+        <activity android:name=".UserMode.UserFavoriteActivity"></activity>
     </application>
 
 </manifest>
