加载新闻优化，加载图片优化，活动实例启动模式优化，逻辑错误修复

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ android {
         vectorDrawables.useSupportLibrary = true
 
     }
+    compileOptions {
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+
+        targetCompatibility JavaVersion.VERSION_1_8
+
+    }
 
     buildTypes {
         release {
