--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,11 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.mob.sdk'
 android {
     compileSdkVersion 28
-
     MobSDK {
         appKey "2b85a17d997b2"
         appSecret "bc386e05d6171e915f1195858a9d017b"
         SMSSDK {}
     }
-
     defaultConfig {
         applicationId "com.example.frametest"
         minSdkVersion 16
@@ -27,7 +25,6 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
 
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -39,17 +36,25 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    //noinspection GradleCompatible
     implementation 'com.android.support:design:28.0.0'
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.github.bumptech.glide:glide:4.2.0'
+   // implementation 'com.jakewharton:butterknife:10.2.0'
+    //annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
+    //第三方弹出框
+    implementation 'com.github.cazaea:sweet-alert-dialog:1.0.0'
+    implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation files('libs/mysql-connector-java-5.1.47.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
+    implementation files('libs/HeWeather_Public_Android_V3.1.jar')
 }
