--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //第三方弹出框
     implementation 'com.github.cazaea:sweet-alert-dialog:1.0.0'
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    //高德定位及3D地图
+    implementation'com.amap.api:3dmap:latest.integration'
+    implementation'com.amap.api:location:latest.integration'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
     implementation files('libs/mysql-connector-java-5.1.47.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
