--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         vectorDrawables.useSupportLibrary = true
 
@@ -31,6 +31,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dexOptions { //优化dex配置
+        dexInProcess true
+        preDexLibraries true
+        javaMaxHeapSize "2g" //Java SDK 64位
+
+    }
+
 
 }
 
@@ -54,6 +61,11 @@ dependencies {
     implementation 'com.amap.api:3dmap:latest.integration'
     implementation 'com.amap.api:location:latest.integration'
     implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    //使用RxBus
+    implementation 'io.reactivex.rxjava2:rxjava:2.0.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    // MultiDex的依赖
+    implementation 'com.android.support:multidex:1.0.3'
     implementation files('libs/mysql-connector-java-5.1.47.jar')
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
